Überschriften sind häufig genug, Seitenzahlen sind besser sichtbar imo

--- a/bwm.tex
+++ b/bwm.tex
@@ -55,13 +55,13 @@
 % === Document starts here ===
 \begin{document}
 
-% Standard headers
+% Standard headers and footers
 \pagestyle{fancy}
 \fancyhead[R]{Henry Feuerlein, Arne Stein}
-\fancyfoot[C]{\thepage}
+\fancyhead[L]{\thepage}
+\fancyfoot[]{}
 
 \section[]{Aufgabe 1}
-\fancyhead[L]{A1}
 
 Gegeben seien die Werte $i_1$ bis $i_9$, auf welche die Positionen der Felder, $1$ bis $9$, zufällig verteilt sind.
 Fridolin springt von Position $0$ zu $i_1$, dann zu $i_2$ usw. bis $i_9$ und schließlich zurück zu $0$.
@@ -105,16 +105,13 @@ $2 i_9$ ist immer gerade, also gilt:
 \end{itemize}
 
 \pagebreak
-\fancyhead[L]{A2}
 \section[]{Aufgabe 2}
 
 \pagebreak
-\fancyhead[L]{A3}
 \section[]{Aufgabe 3}
 Um zu beweisen, dass $AE$ senkrecht zu $CD$ steht, werden die Steigungen beider Geraden in Abhängigkeit des Winkels $\beta$, der die Position von P auf dem Halbkreisbogen $AB$ bestimmt, berechnet.
 
 \subsection[]{Herleitung von $m_{AE}$}
-\fancyhead[L]{A3 --- $m_{AE}$}
 Hierfür relevante Punkte und Strecken:
 
 \begin{center}
@@ -265,7 +262,6 @@ Hierfür relevante Punkte und Strecken:
 \pagebreak
 
 \subsection[]{Herleitung von $m_{CD}$}
-\fancyhead[L]{A3 --- $m_{CD}$}
 Hierfür relevante Punkte und Strecken:
 
 \begin{center}
