--- a/bwm/bwm.tex
+++ b/bwm/bwm.tex
@@ -44,8 +44,9 @@
 \usetikzlibrary{angles,quotes}
 
 % Maths
-\usepackage{amsmath}
+\usepackage[fleqn]{amsmath}
 \usepackage{amssymb}
+\usepackage{amsthm}
 % For °
 \usepackage{siunitx}
 % For floor function shortcut
@@ -57,6 +58,9 @@
 % Fancy Headers
 \usepackage{fancyhdr}
 \setlength{\headheight}{15pt}
+\newenvironment{Together}
+{\vbox\bgroup}
+{\egroup}
 
 % === Document starts here ===
 \begin{document}
@@ -68,12 +72,13 @@
 \fancyfoot[]{}
 
 \section[]{Aufgabe 1}
+\setlength{\mathindent}{2cm}
 
 Gegeben seien die Werte $i_1$ bis $i_9$, auf welche die Positionen der Felder, $1$ bis $9$, zufällig verteilt sind.
 Fridolin springt von Position $0$ zu $i_1$, dann zu $i_2$ usw. bis $i_9$ und schließlich zurück zu $0$. \\[10pt]
 Für eine so gegebene beliebige Reihenfolge der Zahlen $1$ - $9$ lässt sich die zurückgelegte Strecke mit der folgenden Formel berechnen:
 \begin{align*}
-	d &= i_1 + i_9 + \sum_{k=1}^{8} |i_{k+1} - i_k|
+	d &= i_1 + i_9 + \sum_{k=1}^{8} |i_{k+1} - i_k| &&
 \end{align*}
 \begin{itemize}
 	\item[a)] Ein Beispiel für eine Sprungfolge mit der Gesamtdistanz $20$ ist \\
@@ -107,13 +112,15 @@ $2 i_9$ ist immer gerade, also gilt:
 
 Folglich ist $d$ für alle Sprungreihenfolgen eine gerade Zahl.
 \begin{itemize}
-	\item[b)] Die zurückgelegte Strecke kann also nie $25$ Längeneinheiten betragen.
+	\item[b)] Die zurückgelegte Strecke kann also nie $25$ Längeneinheiten betragen. \qed
 \end{itemize}
 
 \pagebreak
 \section[]{Aufgabe 2}
+\setlength{\mathindent}{0.5cm}
+
 Gesucht ist die letzte Nichtnull-Ziffer $LZ(n!)$ einer Zahl $n \in \mathbb{N}$. \\
-<intelligenten paragraph über: erst beispiel, dann allgemein>
+Wir suchen anhand des Beispiels $n=20$ eine andere Darstellungsweise für $n!$:
 \begin{equation*}
 	\begin{split}
 		20! &= 20\cdot19\cdot18\cdot17\cdot16\cdot15\cdot14\cdot13\cdot12\cdot11\cdot10\cdot9\cdot8\cdot7\cdot6\cdot5\cdot4\cdot3\cdot2\cdot1 \\
@@ -124,7 +131,7 @@ Gesucht ist die letzte Nichtnull-Ziffer $LZ(n!)$ einer Zahl $n \in \mathbb{N}$. 
 		&= 5^4 \cdot 4! \cdot 2^8 \cdot (19\cdot9\cdot7\cdot8)(7\cdot13\cdot6\cdot11)(9\cdot4\cdot7\cdot3)(2\cdot3\cdot1\cdot1)
 	\end{split}
 \end{equation*}
-<noch ein intelligenter satz>:
+Mithilfe dieser Darstellung lässt sich die gesuchte Ziffer bestimmen:
 \begin{equation*}
 	\begin{split}	
 		LZ(20!) &= LZ\left(5^4 \cdot 4! \cdot 2^8 \cdot (19\cdot9\cdot7\cdot8)(7\cdot13\cdot6\cdot11)(9\cdot4\cdot7\cdot3)(2\cdot3\cdot1\cdot1)\right) \\
@@ -139,7 +146,9 @@ Für $LZ(n!)$ spielt der Faktor $10^4$ keine Rolle, da nur die letzte Nichtnull-
 		LZ(20!) &= LZ\left(2^4 \cdot 4! \cdot (19\cdot9\cdot7\cdot8)(7\cdot13\cdot6\cdot11)(9\cdot4\cdot7\cdot3)(2\cdot3\cdot1\cdot1)\right)
 	\end{split}
 \end{equation*}
-Die letzte Stelle der 4er-Gruppen an Faktoren am Ende kann auch bestimmt werden, hierfür gibt es zwei Fälle zu betrachten: \\
+
+\begin{Together}
+Die letzte Stelle der 4er-Gruppen an Faktoren am Ende kann auch bestimmt werden, hierfür gibt es zwei Fälle zu betrachten:
 \begin{multicols}{2}
 	\noindent
 	\begin{equation*}
@@ -158,29 +167,82 @@ Die letzte Stelle der 4er-Gruppen an Faktoren am Ende kann auch bestimmt werden,
 		\end{split}
 	\end{equation*}
 \end{multicols}
-$\dots$ steht hierbei für beliebig viele Ziffern, die für die Bestimmung der letzten Nichtnull-Ziffer irrelevant sind. \\[10pt]
+$\dots$ steht hierbei für beliebig viele Ziffern (innerhalb einer 4er-Gruppe sind diese immer gleich). \\[10pt]
+\end{Together}
+\begin{Together}	
+Hierbei spielt es keine Rolle, ob die Ziffern $\dots$ vor den Paaren $8$ und $6$ bzw. $4$ und $2$ gerade oder ungerade sind, da das Produkt des jeweiligen Paars immer auf die selbe Ziffer endet:
+\begin{multicols}{2}
+	\noindent
+	\begin{equation*}
+		\begin{split}
+			\frac{08}{2} \cdot \frac{06}{2} &= 1\underline{2} \\
+			\frac{18}{2} \cdot \frac{16}{2} &= 7\underline{2} \\
+			\frac{28}{2} \cdot \frac{26}{2} &= 18\underline{2} \\
+			\dots
+		\end{split}
+	\end{equation*}
+	\begin{equation*}
+		\begin{split}
+			\frac{04}{2} \cdot \frac{02}{2} &= \underline{2} \\
+			\frac{14}{2} \cdot \frac{12}{2} &= 4\underline{2} \\
+			\frac{24}{2} \cdot \frac{22}{2} &= 13\underline{2} \\
+			\dots
+		\end{split}
+	\end{equation*}
+\end{multicols}
+\end{Together}
+
 In beiden Fällen endet eine Gruppe an 4 Faktoren immer auf die Ziffer $6$, also kann der Term von oben weiter vereinfacht werden:
 \begin{equation*}
 	\begin{split}
 		LZ(20!) &= LZ\left(2^4 \cdot 4! \cdot 6^4\right) \\
 		&= LZ\left(12^4 \cdot 4!\right) \\
 		&= LZ\left(10^4 \cdot 2^4 \cdot 4!\right) \\
-		&= LZ\left(2^4 \cdot 4!\right)
+		&= LZ\left(2^4 \cdot 4!\right) \\
+		LZ(n!) &= LZ\left(2^m \cdot m!\right) \text{ für } m = \left\lfloor\frac{n}{5}\right\rfloor
 	\end{split}
 \end{equation*}
 
-Allgemeiner gilt:
+Für ein $n$, für das $n\bmod 5 \neq 0$ gilt, wird für die Berechnung oben genannter Faktoren der Operator $\lfloor\;\rfloor$ benötigt: $\lfloor n \rfloor$ ist die größte ganze Zahl $\leq n$. \\[10pt]
+Für solche $n$ gilt:
 \begin{equation*}
 	\begin{split}
-		LZ(n!) &= LZ\left(2^m \cdot m!\right)
+		LZ(n!) &= LZ\left(2^m \cdot m! \cdot \frac{n!}{(m\cdot5)!} \right)
 	\end{split}
 \end{equation*}
-für $m = \lfloor\frac{n}{5}\rfloor$.
+Der letzte Faktor stellt dabei die noch fehlenden Faktoren $\leq n$ und $> m\cdot5$ dar. Beispielsweise für $n=23$ steht der letzte Faktor für $23\cdot22\cdot21$. \\[10pt]
+Durch den Faktor $2$ als Teil von $2^m$ kann $LZ(n!)$ also nur gerade Werte annehmen. Die Ziffern $1$, $3$, $5$, $7$ und $9$ können also aus der Folge ausgeschlossen werden ($0$ ist durch die Aufgabenstellung ja auch ausgeschlossen). Es bleiben also noch die Ziffern $2$, $4$, $6$ und $8$. \\[10pt]
+%Böse Zungen könnten nun aber behaupten, dass durch böse Zufälle die anderen beiden Faktoren außer $2^m$ solche Werte annehmen, sodass als Gesamtprodukt nicht jede gerade Ziffer tatsächlich unendlich oft vorkommt. \\[10pt]
+Nun wird der Faktor $2^m$ genauer betrachtet:
+\begin{table}[h!]
+	\hspace{0.5cm}\begin{tabular}{l|c|c|c|c|c|c|c|c|c|c}
+		m & 1 & 2 & 3 & 4 & 5 & 6 & 7 & 8 & 9 & \dots \\
+		\hline
+		$2^m$ & \underline{2} & \underline{4} & \underline{8} & 1\underline{6} & 3\underline{2} & 6\underline{4} & 12\underline{8} & 25\underline{6} & 51\underline{2} & \dots \\
+	\end{tabular}
+\end{table}
+\\
+$\frac{n!}{(m\cdot5)!}$ kann nur folgende Werte annehmen:
+\begin{equation*}
+	\begin{split}
+		9\cdot8\cdot7\cdot6 &= 302\underline{4} \\
+		8\cdot7\cdot6 &= 33\underline{6} \\
+		7\cdot6 &= 4\underline{2} \\
+		6 &= \underline{6} \\
+		4\cdot3\cdot2\cdot1 &= 1\underline{2} \\
+		3\cdot2\cdot1 &= \underline{6} \\
+		2\cdot1 &= \underline{2} \\
+		1 &= \underline{1}
+	\end{split}
+\end{equation*}
 
-<nur noch absatz über sich wiederholende folge der zweierpotenzen (alle gerade) -> gerade * gerade = gerade, folglich für immer 2, 4, 6 und 8 :)
+In diesen beiden Faktoren lässt sich für immer größer werdende $n$ und damit auch $m$ jeweils ein sich unendlich oft wiederholendes iteratives Muster erkennen. Folglich kommt in dem Gesamtprodukt jede der möglichen Ziffern $2$, $4$, $6$ und $8$ unendlich oft vor. \qed
+% Wir beweisen nun, dass in der Folge $m!$ aller $m \in \mathbb{N}$ die Ziffern $2$, $4$, $6$ und $8$ unendlich oft als letzte Ziffer vorkommen:
+% Da $m$ ebenfalls eine natürliche Zahl ist, ist der Faktor $m!$ auch gerade.
 
 \pagebreak
 \section[]{Aufgabe 3}
+\setlength{\mathindent}{4cm}
 Um zu beweisen, dass $AE$ senkrecht zu $CD$ steht, werden die Steigungen beider Geraden in Abhängigkeit des Winkels $\beta$, der die Position von P auf dem Halbkreisbogen $AB$ bestimmt, berechnet.
 
 \subsection[]{Herleitung von $m_{AE}$}
@@ -217,8 +279,8 @@ Hierfür relevante Punkte und Strecken:
 		% Linien
 		\draw[black] (a) -- (e);
 		\draw[black] (m) -- (p);
-		\draw[red, line width=1pt] (m) -- (e) node[midway,above]{$R$};
-		\draw[red, line width=1pt] (a) -- (m) node[midway,below]{$R$};
+		\draw[magenta, line width=1pt] (m) -- (e) node[midway,above]{$R$};
+		\draw[magenta, line width=1pt] (a) -- (m) node[midway,below]{$R$};
 		\draw[blue] (kam) -- (e) node[midway,below right]{$r$};
 		\draw[blue] (kam) -- (0.57732,0) node[midway,right]{$r$};
 		\draw[orange, line width=1pt] (e) -- (0.866,0) node[midway,left]{$h$};
@@ -264,7 +326,7 @@ Hierfür relevante Punkte und Strecken:
 
 			% Linien
 			\draw[orange, line width=1pt] (p) -- (0.98481,0) node[midway,right]{$h$};
-			\draw[red, line width=1pt] (m) -- (b2) node[midway,above left]{$R$};
+			\draw[magenta, line width=1pt] (m) -- (b2) node[midway,above left]{$R$};
 			\draw[violet] (kam) -- (p) node[midway,above]{$r$};
 			\draw[violet, line width=1pt] (kam) -- (0.83896,0) node[midway,left]{$r$};
 			\draw[blue, line width=1pt] (m) -- (p_) node[midway,below]{$R_0$};
@@ -371,12 +433,12 @@ Hierfür relevante Punkte und Strecken:
 		\draw[black] (c) -- (d);
 
 		\draw[violet, line width=1pt] (m) -- (kbm) node[midway,above right]{$R-r$};
-		\draw[red, line width=1pt] (kbm) -- (c) node[midway,above right]{$r$};
+		\draw[magenta, line width=1pt] (kbm) -- (c) node[midway,above right]{$r$};
 		\draw[blue, line width=1pt] (m) -- (d) node[midway,below]{$l$};
 		\draw[orange, line width=1pt] (c_) -- (d) node[midway,below]{$x$};
 		\draw[orange, dotted, line width=1pt] (kbm_side) -- (kbm) node[midway,below]{};
-		\draw[red, line width=1pt] (c_) -- (kbm_side) node[midway,left]{$r$};
-		\draw[red, dotted, line width=1pt] (d) -- (kbm) node[midway,left]{};
+		\draw[magenta, line width=1pt] (c_) -- (kbm_side) node[midway,left]{$r$};
+		\draw[magenta, dotted, line width=1pt] (d) -- (kbm) node[midway,left]{};
 		\draw[teal, line width=1pt] (kbm_side) -- (c) node[midway, left]{$h$};
 
 		% Winkel
@@ -391,21 +453,21 @@ Hierfür relevante Punkte und Strecken:
 \end{align*}
 
 \begin{align*}
-	\textcolor{violet}{(R-r)}^2 &= \textcolor{red}{r}^2+\textcolor{blue}{l}^2 \\
+	\textcolor{violet}{(R-r)}^2 &= \textcolor{magenta}{r}^2+\textcolor{blue}{l}^2 \\
 	l &= \sqrt{(R-r)^2-r^2} \\
 	&= \sqrt{R(R-2r)} \tag{1}
 \end{align*}
 
 \begin{align*}
 	\sin\alpha &= \frac{\text{Gegenkathete}}{\text{Hypotenuse}} \\
-	\sin\alpha &= \frac{ \textcolor{red}{r} }{ \textcolor{violet}{R-r} } \\
+	\sin\alpha &= \frac{ \textcolor{magenta}{r} }{ \textcolor{violet}{R-r} } \\
 	r &= R\sin\alpha - r\sin\alpha \\
 	r(1+\sin\alpha) &= R\sin\alpha \\
 	r &= \frac{R\sin\alpha}{1+\sin\alpha} \tag{2}
 \end{align*}
 
 \begin{align*}
-	\textcolor{teal}{h}^2 + \textcolor{orange}{x}^2 &= \textcolor{red}{r}^2 \\
+	\textcolor{teal}{h}^2 + \textcolor{orange}{x}^2 &= \textcolor{magenta}{r}^2 \\
 	h &= \sqrt{r^2-x^2} \tag{3}
 \end{align*}
 
